--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "discord-bot",
+  "name": "naoko-bot",
   "version": "1.0.0",
-  "description": "Discord test bot",
+  "description": "Naoko's discord bot",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start-dev": "nodemon index.js"
   },
   "keywords": [
     "discord",
@@ -14,6 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^14.12.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.6.12",
+    "test": "jest test/**/*.test.js"
+  },
+  "devDependencies": {
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1"
   }
 }
